@@ -1,3 +1,0 @@
-man1_MANS = $(PACKAGE_NAME).1
-
-EXTRA_DIST = $(man1_MANS)
